--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,17 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Organisations <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#"><b>Charities</b></a></li>
+            <% @charities.each do |charity| %>
+                <li><a href="#"><%= charity.name %></a></li>
+            <% end %>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#"><b>Retailers</b></a></li>
+            <% @retailers.each do |retailer| %>
+                <li><a href="#"><%= retailer.name %></a></li>
+            <% end %>
           </ul>
         </li>
       </ul>
