--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,23 +25,26 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to 'About', pages_about_path %></li>
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Organisations <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <%= org.nil? ? "Organisations" : org.name%>
+          <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#"><b>Charities</b></a></li>
             <% @charities.each do |charity| %>
-                <li><a href="#"><%= charity.name %></a></li>
+                <li><a href="/set_charity/<%= charity.id %>"><%= charity.name %></a></li>
             <% end %>
             <li class="divider"></li>
             <li><a href="#"><b>Retailers</b></a></li>
             <% @retailers.each do |retailer| %>
-                <li><a href="#"><%= retailer.name %></a></li>
+                <li><a href="/set_retailer/<%= retailer.id %>"><%= retailer.name %></a></li>
             <% end %>
           </ul>
         </li>
       </ul>
+
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav> 
