add relationship from offers to retailers

--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :description %>
   </div>
   <div class="field">
-    <%= f.label :retailer %><br>
-    <%= f.text_field :retailer %>
+    <%= f.label :retailer_id %><br>
+    <%= f.collection_select :retailer, @retailers, :id, :name %>
   </div>
   <div class="field">
     <%= f.label :location %><br>
