--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,5 @@
 @import 'bourbon/bourbon';
 @import 'bootstrap/bootstrap';
+@import 'application/branding';
 @import 'application/bricks';
 @import 'application/offer-card';
