--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<div class="container brand__area">
+<%= image_tag 'wastenot_logo.png', class: 'brand__logo' %>
+</div>  
  <nav class="navbar navbar-default" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -17,13 +21,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Waste Not</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to 'About', pages_about_path %></li>
+        <li><%= link_to 'About', pages_about_path %></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
@@ -49,8 +52,7 @@
   </div><!-- /.container-fluid -->
 </nav> 
 <div class="container">
-<%= yield %>
-  
+  <%= yield %>
 </div>
 
 </body>
