--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,12 +35,12 @@
             <%= org.nil? ? "Organisations" : org.name%>
           <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#"><b>Charities</b></a></li>
+            <li><a href="/charities"><b>Charities</b></a></li>
             <% @charities.each do |charity| %>
                 <li><a href="/set_charity/<%= charity.id %>"><%= charity.name %></a></li>
             <% end %>
             <li class="divider"></li>
-            <li><a href="#"><b>Retailers</b></a></li>
+            <li><a href="/retailers"><b>Retailers</b></a></li>
             <% @retailers.each do |retailer| %>
                 <li><a href="/set_retailer/<%= retailer.id %>"><%= retailer.name %></a></li>
             <% end %>
