Template for cards

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 <body>
 
 <div class="container brand__area">
-<%= image_tag 'wastenot_logo.png', class: 'brand__logo' %>
+  <a href="<%= root_path %>">
+    <%= image_tag 'wastenot_logo.png', class: 'brand__logo' %>
+  </a>
 </div>  
  <nav class="navbar navbar-default" role="navigation">
   <div class="container">
