--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,22 +1,5 @@
 <h1>Offers</h1>
 
-
-
-
 <%= link_to 'New Offer', new_offer_path, class: 'btn btn-primary' %>
 
-
-<div class="bricks effect-4" data-bricks="true" id="offer-bricks">
-    <% @offers.each do |offer| %>
-      <a href="" class="brick__item offer-card">
-        <%= image_tag(offer.cover_image_url, class: 'offer-card__image') if offer.cover_image? %>
-        <div class="offer-card__content">
-           <h4 class="offer-card__title"><%= offer.title %></h4>
-           <div><%= offer.description %></div>
-           <div class=""><%= offer.retailer.name if offer.retailer %></div>
-        </div>
-      </a>
-    <% end %>
-
-
-</div>
+<%= render 'offers/offer_cards', offers: @offers %>
