--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,8 @@
             <% @retailers.each do |retailer| %>
                 <li><a href="/set_retailer/<%= retailer.id %>"><%= retailer.name %></a></li>
             <% end %>
+            <li class="divider"></li>
+            <li><a href="/unset_org">Logout</a></li>
           </ul>
         </li>
       </ul>
