--- a/app/assets/stylesheets/application/_bricks.css.scss
+++ b/app/assets/stylesheets/application/_bricks.css.scss
@@ -9,7 +9,7 @@
   margin-bottom: 20px;
 }
 
-//.bricks .brick__item { opacity: 0; }
+.bricks .brick__item { opacity: 0; }
 
 .brick__item.shown,
 .no-js .brick__item,
