--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Offers</h1>
 
-<%= link_to 'New Offer', new_offer_path, class: 'btn btn-primary' %>
+<%= link_to 'New Offer', new_offer_path, class: 'btn btn-primary' if can_create_offer %>
 
 <%= render 'offers/offer_cards', offers: @offers %>
