--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Category:</strong>
-  <%= @offer.category.name %>
+  <%= @offer.category.name  unless @offer.category.nil?%>
 </p>
 
 <%= image_tag(@offer.cover_image_url, class: 'offer-card__image') if @offer.cover_image? %>
