--- a/app/views/charities/show.html.erb
+++ b/app/views/charities/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Bio:</strong>
+  <%= @charity.bio %>
+</p>
+
+<p>
   <strong>Webpage:</strong>
   <%= @charity.webpage %>
 </p>
