--- a/app/views/charities/_form.html.erb
+++ b/app/views/charities/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :bio %><br>
+    <%= f.text_field :bio %>
+  </div>
+  <div class="field">
     <%= f.label :webpage %><br>
     <%= f.text_field :webpage %>
   </div>
@@ -24,12 +28,12 @@
     <%= f.text_field :contact_name %>
   </div>
   <div class="field">
-    <%= f.label :contact_email %><br>
-    <%= f.text_field :contact_email %>
-  </div>
-  <div class="field">
     <%= f.label :contact_phone %><br>
     <%= f.text_field :contact_phone %>
+  </div>
+  <div class="field">
+    <%= f.label :contact_email %><br>
+    <%= f.text_field :contact_email %>
   </div>
   <div class="actions">
     <%= f.submit %>
