--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,17 @@
       </button>
     </div>
 
+    
+
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <% if can_create_offer %>
+      <form class="navbar-form navbar-left" role="search">
+        <%= link_to 'Create offer', new_offer_path, class: 'btn btn-success' %>
+      </form>
+      <% end %>
+
       <ul class="nav navbar-nav">
         <li><%= link_to 'About', pages_about_path %></li>
       </ul>
