--- a/app/assets/stylesheets/application/_offer-card.css.scss
+++ b/app/assets/stylesheets/application/_offer-card.css.scss
@@ -17,6 +17,12 @@
   margin-top: 0;
 }
 
+.offer-card__retailer {
+  font-size: 10px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
 .offer-card__content {
   padding: 20px;
   font-size: 13px;
@@ -24,4 +30,11 @@
 
 .offer-card__image {
   width: 100%;
+}
+
+.offer-card__category {
+  @extend .label;
+  @extend .label-default;
+  margin: 10px 0;
+  display: inline-block;
 }
