--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,11 @@
   </div><!-- /.container-fluid -->
 </nav> 
 <div class="container">
+  <% if notice.present? %>
+    <div class="alert alert-info">
+      <%= notice %>
+    </div>
+  <% end %>  
   <%= yield %>
 </div>
 
