About page content

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
 <h1>WasteNot?</h1>
-<p>Here to curb wastage of food and goods</p>
+<p>Reduce Cost – Reduce Waste – Increase Karma</p>
+<p>Our free service directly connects companies to charitable causes to allow either one off or regular distribution of excess stock.
+</p>
