--- a/app/views/charities/index.html.erb
+++ b/app/views/charities/index.html.erb
@@ -1,6 +1,6 @@
-<h1>offer charities</h1>
+<h1>Charities</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
