--- a/app/views/retailers/index.html.erb
+++ b/app/views/retailers/index.html.erb
@@ -1,6 +1,6 @@
-<h1>offer retailers</h1>
+<h1>Retailers</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
