--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
     <div class="field">
     <%= f.label :category_id %><br>
-    <%= f.collection_select :category, @categories, :id, :name %>
+    <%= f.collection_select :category_id, @categories, :id, :name %>
   </div>
 
 
