Styling for offer show

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,3 +3,4 @@
 @import 'application/branding';
 @import 'application/bricks';
 @import 'application/offer-card';
+@import 'application/offer-detail';
