--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,31 +1,29 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @offer.title %></h1>
+<p class="offer__retailer-name"><%= @offer.retailer.name %></p>
+<div class="row">
+  <div class="col-xs-7">
+    <div>
+      <%= simple_format @offer.description %>
+    </div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @offer.title %>
-</p>
+    <p>
+      <strong>Location:</strong>
+      <%= @offer.location %>
+    </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @offer.description %>
-</p>
+    <% unless @offer.category.nil? %>
+      <p class="offer__category">
+        <%= @offer.category.name %>
+      </p>
+    <% end %>
+  </div>
 
-<p>
-  <strong>Retailer:</strong>
-  <%= @offer.retailer.name %>
-</p>
+  <div class="col-xs-5">
+    <%= image_tag(@offer.cover_image_url, class: 'offer-card__image') if @offer.cover_image? %>
+  </div>
+</div>
 
-<p>
-  <strong>Location:</strong>
-  <%= @offer.location %>
-</p>
 
-<p>
-  <strong>Category:</strong>
-  <%= @offer.category.name  unless @offer.category.nil?%>
-</p>
-
-<%= image_tag(@offer.cover_image_url, class: 'offer-card__image') if @offer.cover_image? %>
 
 <%= link_to 'Accept Offer', offer_accept_path(@offer) if @can_accept%>
 <%= link_to 'Edit Offer', edit_offer_path(@offer) if @can_edit%>
