--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,14 @@
         <li><%= link_to 'About', pages_about_path %></li>
       </ul>
 
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Contact Us', pages_contact_path %></li>
+      </ul>
+
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Help', pages_help_path %></li>
+      </ul>
+
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
