--- a/app/views/retailers/_form.html.erb
+++ b/app/views/retailers/_form.html.erb
@@ -11,31 +11,36 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :bio %><br>
-    <%= f.text_field :bio %>
+  <div class="form-group">
+    <%= f.label :bio %>
+    <%= f.text_area :bio, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :web_page %><br>
-    <%= f.text_field :web_page %>
+  <div class="form-group">
+    <%= f.label :web_page %>
+    <%= f.text_field :web_page, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :contact_name %><br>
-    <%= f.text_field :contact_name %>
+  <div class="form-group">
+    <%= f.label :contact_name %>
+    <%= f.text_field :contact_name, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :contact_phone %><br>
-    <%= f.text_field :contact_phone %>
+  <div class="form-group">
+    <%= f.label :contact_phone %>
+    <%= f.text_field :contact_phone, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :contact_email %><br>
-    <%= f.text_field :contact_email %>
+  <div class="form-group">
+    <%= image_tag(@retailer.logo_url) if @retailer.logo? %>
+    <%= f.label :logo %>
+    <%= f.file_field :logo %>
+  </div>
+  <div class="form-group">
+    <%= f.label :contact_email %>
+    <%= f.text_field :contact_email, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit', class: 'btn btn-success' %>
   </div>
 <% end %>
