added filtering by category

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,5 +2,6 @@
 @import 'bootstrap/bootstrap';
 @import 'application/branding';
 @import 'application/bricks';
+@import 'application/offers';
 @import 'application/offer-card';
 @import 'application/offer-detail';
