--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -8,6 +8,11 @@
     </div>
   </div>
   <div class="col-xs-9">
-      <%= render 'offers/offer_cards', offers: @offers %>
+    <div class="jumbotron">
+      <h1>Help, Recycle, Reuse, Give</h1>
+      <p>Reduce waste, help others. Donate excess stock</p>
+      <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+    </div>
+    <%= render 'offers/offer_cards', offers: @offers %>
   </div>
 </div>
