--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-3">
+  <div class="col-md-3">
     <div class="list-group">
       <a class="list-group-item <%= "active" if @active_category_name == "All"%>" href="<%= offers_path %>">All</a>
       <% @categories.each do |cat| %>
@@ -7,7 +7,7 @@
       <% end %>
     </div>
   </div>
-  <div class="col-xs-9">
+  <div class="col-md-9">
     <div class="jumbotron">
       <h1>Help, Recycle, Reuse, Give</h1>
       <p>Reduce waste, help others. Donate excess stock</p>
