--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -38,3 +38,4 @@
 
 <%= link_to 'Accept Offer', offer_accept_path(@offer), class: "btn btn-success" if @can_accept%>
 <%= link_to 'Edit Offer', edit_offer_path(@offer) if @can_edit%>
+<%= link_to 'Remove offer', offer_unaccept_path(@offer), class: "btn btn-warning" if @can_edit%>
