--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -26,6 +26,13 @@
         <%= @offer.category.name %>
       </p>
     <% end %>
+
+    <% if @offer.charity %>
+      <p>
+        <strong>Charity:</strong>
+        <%= @offer.charity.name %>
+      </p>
+     <% end %>
   </div>
 
   <div class="col-md-5">
