--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,3 +5,4 @@
 @import 'application/offers';
 @import 'application/offer-card';
 @import 'application/offer-detail';
+@import 'application/star-rating';
