--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -48,14 +48,23 @@
 <%= link_to 'Remove offer', offer_unaccept_path(@offer), class: "btn btn-warning" if @can_edit && @offer.charity %>
 
 
+
+
+
 <% if @can_endorse %>
   <%= form_for(@endorsement) do |f| %>
     <%= f.hidden_field :retailer_id, value: @offer.retailer.id %>
     <%= f.hidden_field :charity_id, value: @offer.charity.id %>
-    <div class="field">
-      <%= f.label :stars %><br>
-      <%= f.text_field :stars %>
-    </div>
+
+
+  <span class="star-rating">
+    <%= f.radio_button :stars, '1' %><i></i>
+    <%= f.radio_button :stars, '2' %><i></i>
+    <%= f.radio_button :stars, '3' %><i></i>
+    <%= f.radio_button :stars, '4' %><i></i>
+    <%= f.radio_button :stars, '5' %><i></i>
+  </span>
+
     <div class="field">
       <%= f.label :comment %><br>
       <%= f.text_field :comment %>
